# cmakegametest

./: CMakeLists.txt  main.c  something.c
.github/workflows/: cmake-multi-platform.yml
